--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "express": "^4.18.2",
-    "node-cache": "^5.1.2",
     "body-parser": "^1.20.2",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
-    "proj4": "^2.11.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "ldapjs": "^3.0.7"
+    "ldapjs": "^3.0.7",
+    "node-cache": "^5.1.2",
+    "proj4": "^2.11.0"
   }
 }
